@@ -6,7 +6,7 @@ This document describes what must be done when upgrading between different versi
 
 Discontinue passing `pipeline_use_threads` flag to `rediscluster.StrictRedisCluster` or `rediscluster.RedisCluster`.
 
-Also discontinue passing `use_threads` flag to the pipeline() method. 
+Also discontinue passing `use_threads` flag to the pipeline() method.
 
 
 In 1.1.0 and prior, you could use `pipeline_use_threads` flag to tell the client to perform queries to the different nodes in parallel via threads. We exposed this as a flag because using threads might have been risky and we wanted people to be able to disable it if needed.
@@ -16,6 +16,10 @@ With this release we figured out how to get parallelization of the commands with
 That means we don't need the `pipeline_use_threads` flag anymore, or the `use_threads` flag that could be passed into the instantiation of the pipeline object itself.
 
 The logic is greatly simplified and the default behavior will now come with a performance boost and no need to use threads.
+
+
+Publish and subscribe no longer connects to a single instance. It now hashes the channel name and uses that to determine what node to connect to. More work will be done in the future when `redis-server` improves the pubsub implementation. Please read up on the documentation about pubsub in the `docs/pubsub.md` file about the problems and limitations on using a pubsub in a cluster.
+
 
 
 ## 1.0.0 --> 1.1.0
